New CSS changes
New CSS changes

--- a/PHP_files/css/style.css
+++ b/PHP_files/css/style.css
@@ -1,10 +1,10 @@
-/* How to call CSS file in HTML:
-	<head>
-		<link rel="stylesheet" type="text/css" href="cssFileName.css">
-	</head>
-*/
+/*************** How to call CSS file in HTML:
+	**************<head>
+		**************<link rel="stylesheet" type="text/css" href="cssFileName.css">
+	**************</head>
+***************/
 
-/* blackground color  */
+/**************blackground color**************/
 body{
     /*background-color: rgb(241, 239, 241);*/
 	background: #F5F5F5 url(../images/p5.jpg);
@@ -12,65 +12,89 @@ body{
 }
 
 
-/* h2 header format  */
+
+/**************font style**************/
+@font-face {
+	font-family: 'OpenSansRegular';
+	src: url('../fonts/OpenSansRegular.eot');
+	src: local('OpenSansRegular'), url('../fonts/OpenSansRegular.woff') format('woff'), url('../fonts/OpenSansRegular.ttf') format('truetype');
+}
+
+
+
+/************** h1 header style **************/
 h1  {
     color: black;
     margin-left: 10px;
 	text-align: center;
-	font-size: 40px
+	font-size: 40px;
+	font-weight: bold;
+	font:bold 200% 'OpenSansRegular';
 }
 
 
-/* header 2  format  */
+
+/************** header 2 style  **************/
 h2 {
 	color: black;
 	margin-left: 10px;
-	font-size: 20px
+	font-size: 20px;
+	font-weight: bold;
+	font:bold 100% 'OpenSansRegular';
 }
 
 
-/* links format  */	
-/* how to call in HTML: <a href="link.php">name</a> */ 
+
+/************** links format  **************/	
+/************** how to call in HTML: <a href="link.php">name</a> **************/ 
 a.singlelink:link {
     color: black;
 	text-decoration: none;
 	font-weight: bold;
+	font:normal 100% 'OpenSansRegular';
 }
 a.singlelink:visited {
-    color: rgb(148, 31, 146);
+    color: rgb(172, 25, 54); /*dark red*/
 	text-decoration: none;
 	font-weight: bold;
+	font:normal 100% 'OpenSansRegular';
 }
 a.singlelink:hover {
     color: black;
 	text-decoration: underline;
 	font-weight: bold;
+	font:normal 100% 'OpenSansRegular';
 }
 a.singlelink:active {
     color: black;
 	text-decoration: underline;
 	font-weight: bold;
+	font:normal 100% 'OpenSansRegular';
 }
 
-/* links format 2 */	
-/* how to call in HTML: <a href="link.php">name</a> */ 
+
+
+/**************links style 2 **************/	
+/************** how to call in HTML: <a href="link.php">name</a> **************/ 
 a.singlelink2:link, a.singlelink2:visited {
-    background-color: rgb(167, 103, 144);
+    background-color: rgb(150, 192, 206); /*light blue*/
     color: white;
 	font-weight: bold;
+	font:normal 100% 'OpenSansRegular';
     padding: 14px 25px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
 }
 a.singlelink2:hover, a.singlelink2:active {
-    background-color: rgb(137, 62, 124);
+    background-color: rgb(37, 65, 94); /*rgb(82, 85, 100); /*dark blue*/
+	font:normal 100% 'OpenSansRegular';
 }
 
 
 
-/* Full-height Fixed Vertical Navbar */
-/* how to call in HTML: <ul><li><a class = "active herf ="#link.php"> name</a></li><ul>> */ 
+/************** Full-height Fixed Vertical Navbar **************/
+/************** how to call in HTML: <ul><li><a class = "active herf ="#link.php"> name</a></li><ul>> **************/ 
 /*
 ul {
     list-style-type: none;
@@ -81,56 +105,69 @@ ul {
     position: fixed;
     height: 100%;
     overflow: auto;
+	font: 'OpenSansRegular';
 }
 li a {
     display: block;
     color: #000;
     padding: 8px 16px;
     text-decoration: none;
+	font: 'OpenSansRegular';
 }
 li a.active {
     background-color: #4CAF50;
     color: white;
+	font: 'OpenSansRegular';
 }
 li a:hover:not(.active) {
     background-color: #555;
     color: white;
+	font: 'OpenSansRegular';
 }
 */
 
-/*Fixed top Navigation*/
-/* how to call in HTML: <ul><li><a class = "active herf ="#link.php"> name</a></li><ul>> */ 
+
+
+/**************Fixed top Navigation**************/
+/************** how to call in HTML: <ul><li><a class = "active herf ="#link.php"> name</a></li><ul>> **************/ 
 ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: rgb(226, 232, 228);
-	position: fixed;
+    background-color: rgb(150, 192, 206); /*light blue*/
+	/*position: fixed;*/
 	top: 0;
 	width: 100%;
+	font:normal 100% 'OpenSansRegular';
 }
 li {
     float: left;
+	font:normal 100% 'OpenSansRegular';
 }
 li a{
     display: block;
-    color: black;
+    color: white;
 	font-weight: bold;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+	font:normal 100% 'OpenSansRegular';
 }
 li a:hover:not(.active) {
-    background-color: rgb(167, 142, 144); /* Color: Dark gray: rgb(167, 142, 144)*/
+    background-color: rgb(37, 65, 94); /*rgb(82, 85, 100); /*dark blue*/
 	color: white;
+	font:normal 100% 'OpenSansRegular';
 }
 .active {
-    background-color: rgb(85, 100, 146); /* Color: purple: rgb(167, 142, 144)*/
-	color: white;
+    background-color: rgb(246, 246, 246); /*light gray*/
+	color: black;
+	font:normal 100% 'OpenSansRegular';
 }
 
 
+
+/**************form style**************/
 input[type=text], select {
     width: 100%;
     padding: 12px 20px;
@@ -139,29 +176,200 @@ input[type=text], select {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+	font:normal 100% 'OpenSansRegular';
 }
 input[type=submit] {
     width: 100%;
-    background-color: rgb(85, 100, 146); /* Coloe: purple: rgb(85, 100, 146)*/
+    background-color: rgb(68, 128, 191); /*rgb(116, 130, 143); /*blue*/
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+	font:normal 100% 'OpenSansRegular';
 }
 input[type=submit]:hover {
-    background-color: rgb(85, 79, 146); /* Coloe: dark purple : rgb(85, 79, 146)*/
+    background-color: rgb(37, 65, 94); /*rgb(82, 85, 100); /*dark blue*/
+	font:normal 100% 'OpenSansRegular';
 }
 
-/*Div style*/
-div {
+
+
+/**************Div form style**************/
+div.formdiv{
     border-radius: 5px;
-    background-color: #f2f2f2; 
+    background-color: rgb(214, 215, 216); /*Dark gray*/
 	margin-left: 20%;
 	margin-right: 20%;
 	margin-top: 5%;
 	margin-bottom: 10%;
     padding: 20px;
+	font:normal 100% 'OpenSansRegular';
 }
+
+/**************Div page style**************/
+div.pagediv{
+    /*border-radius: 5px;*/
+    background-color: rgb(246, 246, 246); /*light gray*/
+	margin-left: 10%;
+	margin-right: 10%;
+	margin-top: 3%;
+	margin-bottom: 3%;
+    /*padding: 20px;*/
+	font:normal 100% 'OpenSansRegular';
+}
+
+
+
+/**************Link style 3(looks like a button)**************//
+a.singlelink3:link, a.singlelink3:visited {
+    background-color: rgb(68, 128, 191); /*rgb(116, 130, 143); /*blue*/
+    color: black;
+    border: 2px rgb(142, 189, 255);
+    padding: 10px 100px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-style: bold;
+    font-size: 15px;
+}
+a.singlelink3:hover, a.singlelink3:active {
+    background-color: rgb(37, 65, 94); /*rgb(82, 85, 100); /*dark blue*/
+    color: white;
+}
+
+
+
+/**************Fix size link style 3**************/
+a.width-200px{
+    width: 500px;
+    display: inline-block;
+    margin-left: 15%;
+}
+
+
+/**************Button Style**************/
+.button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: rgb(68, 128, 191); /*rgb(116, 130, 143); /*blue*/
+  border: none;
+  color: black;
+  text-align: center;
+  font-size: 15px;
+  padding: 10px;
+  width: 400px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+  font:bold 'OpenSansRegular';
+}
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+  font:bold 'OpenSansRegular';
+}
+.button span:after {
+  content: '»';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+  font:bold 'OpenSansRegular';
+}
+.button:hover span {
+  padding-right: 25px;
+  font:bold 'OpenSansRegular';
+}
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+  font:bold 'OpenSansRegular';
+}
+
+
+
+/**************list design**************/
+ol {
+    padding: 10px;
+	margin-left: 5%;
+	margin-right: 5%;
+	margin-bottom: auto;
+    font:bold 'OpenSansRegular';
+
+}
+ol li {
+    padding: 10px;
+    margin-left: 40px;
+    font:bold 'OpenSansRegular';
+}
+ul {
+    background: rgb(246, 246, 246); /*gray*/
+    /*padding: 5px;*/
+}
+ul li {
+    background: rgb(68, 128, 191); /*rgb(116, 130, 143); /*blue*/
+    /*margin: 5px;*/
+}
+
+
+
+/**************footer**************/
+footer {
+ /* margin-top: 1px;
+  padding: 20px 0 5px 0;
+  text-align: center; 
+  border-top: 1px solid #eaeaea;
+  color: #777;*/
+  width: 100%;
+  font: normal 100% 'News Cycle',  arial, sans-serif;
+  height: 20px;
+  padding: 20px 0 5px 0;
+  color: #222;
+  background: #D4D4D4;
+}
+footer a {
+  color: #555;
+  float: center;
+}
+footer a:hover {
+  color: #222;
+}
+footer small {
+  /*float: center;*/
+  margin-left: 30px;
+}
+footer ul {
+  float: right;
+  list-style: none;
+}
+footer ul li {
+  float: left;
+  margin-left: 15px;
+}
+
+
+/**************Table style**************/
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+th, td {
+    text-align: left;
+    padding: 8px;
+}
+tr:nth-child(even){
+    background-color: white;
+}
+th {
+    background-color: rgb(37, 65, 94); /*rgb(82, 85, 100);/*dark blue*/
+    text-align: center;
+    color: white;
+}
+
+
 
